# passkit.rs

./: .travis.yml  Cargo.toml  README.md
examples/: create_pass.rs
src/: field.rs  lib.rs  main.rs  pass.rs  personalization.rs  util.rs
