[package]
name = "passkit"
version = "0.0.0"
authors = ["Sergey Sova <mail@sergeysova.com>"]
description = "Apple PassKit library to manage passes"
license = "MIT"
repository = "https://github.com/sergeysova/passkit.rs"
documentation = "https://docs.rs/crate/passkit"

[dependencies]
serde = "1.0.80"
serde_json = "1.0.33"
serde_derive = "1.0.80"

[badges]
travis-ci = { repository = "sergeysova/passkit.rs", branch = "master" }
codecov = { repository = "sergeysova/passkit.rs" }
maintenance = { status = "actively-developed" }
